<resources>
    <string name="app_name">cccandroidtest</string>
    <string name="est_number">Est. Number</string>
    <string name="revision_number">Revision Number</string>
    <string name="contact">Contact</string>
    <string name="requester">Requester</string>
    <string name="created">Created</string>
    <string name="created_by">Created By</string>
    <string name="est_details">Est. Details</string>
</resources>